force-app/main/default/objects/TriggerHandler__mdt/TriggerHandler__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>