force-app/main/default/objects/TriggerHandler__mdt/fields/SobjectType__c.field-meta.xml
<CustomField>
    <fullName>SobjectType__c</fullName>
    <label>SobjectType</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Trigger_Handlers</relationshipLabel>
    <relationshipName>Trigger_Handlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>